-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.127 2007-10-15 03:56:34 guru Exp $
-----------------------------------------------------------------------------------------

2007-10-14	pwessel
	* gmt_map.c:		Round-off could mess mapping of west/east to xmin/xmax
				Now has a safety valve for checking that this does not occur
-----------------------------------------------------------------------------------------
2007-10-10
	* tar 4.2.1 made and released via email
-----------------------------------------------------------------------------------------

2007-10-10
	* doc/*.tex:		Fixed spelling errors.
	* gmt_nc.c:		Properly write out actual_range in actual units, not grid units.
				Backward compatibility for scaled integers built in.
				Store GMT_version and truncate global text attributes to proper length.

2007-10-09	remko
	* pslib.c:		Enclose EPS inclusion between %%BeginDocument: and %%EndDocument
	* install-sh:		Replaced version from 1991 with one from 2004 that can install
				multiple files at a time.

2007-10-07	remko
	* nc2xy.c:		Added missing -f option
	* configure.in:		No more "test ! "$A" = "B"", but use test "X$A" != "XB"
				Removed --wrapbindir and --wrapmandir (were not used anywhere)

2007-10-07	pwessel
	* gmt_support.c:	Removed memory leak in GMT_delaunay
	
2007-10-05	pwessel
	* grdcontour.c:		Only extend subset by 1 row/col if pixel-registered
	* grdvolume.c:		Added missing -f option
	
2007-10-04	pwessel
	* psscale.c:		Did not work if -Q and -B1p were used together
	* psbasemap.txt:	Point out that -E disables plotting of titles

2007-10-04	remko
	* gmt_map.c (GMT_map_setup):	Removed restriction that east and west limits can not be
				both negative. This fixed the remaining Hexagone problem.

2007-10-03	remko
	* makegmt.macros.in, */makefile:	Found robust way of assigning .exe extension
				to Cygwin programs